--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -22,7 +22,7 @@
                     </td>
                     <td *ngIf="!i.completed">
                         <div class="alert alert-danger" role="alert">
-                            Completed
+                            Not Completed
                           </div>
                     </td>
                   </tr>
